--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==1.6.0
-torchvision==0.7.0
-pytorch3d==0.2.5
-kornia==0.4.0 
+# torch==1.6.0
+# torchvision==0.7.0
+# pytorch3d==0.2.5
+# kornia==0.4.0 
 matplotlib
 opencv-python
 trimesh
